examples/negative/protocols/impl_double_same_unit.kai
# Negative fixture (#520 / protocols): two `impl P for Box`
# blocks in the same compilation unit. The dispatch resolver
# must reject — instance selection is otherwise ambiguous.

protocol P { foo(x: Self) : Int }

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : Int = match b { Box(n) -> n }
}

impl P for Box {
  fn foo(b: Box) : Int = match b { Box(n) -> n + 1 }
}

fn main() : Int = foo(Box(1))
